fixing small thing

--- a/src/app/entry/entryEvent/entryEvent.html
+++ b/src/app/entry/entryEvent/entryEvent.html
@@ -10,7 +10,7 @@
                 <md-card-content>
                     
                     <form name="eventForm"
-                    (ngSubmit)="submit()"
+                    (ngSubmit)="openDialog()"
                     #eventForm="ngForm"
                     *ngIf="submission">
 
