--- a/src/app/entry/entryEvent/entryEvent.html
+++ b/src/app/entry/entryEvent/entryEvent.html
@@ -97,7 +97,7 @@
                             placeholder="Topic/Emphasis/Theme"
                             id="eventTopic" 
                             class="form-control" 
-                            [(ngModel)]="submission.data.topic"
+                            [(ngModel)]="submission.data.theme"
                             name="eventTopic"
                             #eventTopic="ngModel"
                             required/>
