--- a/src/app/entry/entryPerson/entryPerson.html
+++ b/src/app/entry/entryPerson/entryPerson.html
@@ -327,42 +327,42 @@
                                 ng-true-value="true"
                                 ng-false-value="false"
                                 name="personEnsembleOne"
-                                [(ngModel)]="submission.data.categories.Choir">
+                                [(ngModel)]="submission.data.ensembles.Choir">
                                 Choir
                             </md-checkbox>
                             <md-checkbox class="block-input"
                                 ng-true-value="true"
                                 ng-false-value="false"
                                 name="personEnsembleTwo"
-                                [(ngModel)]="submission.data.categories.Cantor">
+                                [(ngModel)]="submission.data.ensembles.Cantor">
                                 Cantor
                             </md-checkbox>
                             <md-checkbox class="block-input"
                                 ng-true-value="true"
                                 ng-false-value="false"
                                 name="personEnsembleThree"
-                                [(ngModel)]="submission.data.categories.Song_Enlivener">
+                                [(ngModel)]="submission.data.ensembles.Song_Enlivener">
                                 Song-Enlivener
                             </md-checkbox>
                             <md-checkbox class="block-input"
                                 ng-true-value="true"
                                 ng-false-value="false"
                                 name="personEnsembleFour"
-                                [(ngModel)]="submission.data.categories.Solo">
+                                [(ngModel)]="submission.data.ensembles.Solo">
                                 Lead Singer from Band (Solo)
                             </md-checkbox>
                             <md-checkbox class="block-input"
                                 ng-true-value="true"
                                 ng-false-value="false"
                                 name="personEnsembleFive"
-                                [(ngModel)]="submission.data.categories.Lead_Singer_from_Band_with_Other_Vocalists">
+                                [(ngModel)]="submission.data.ensembles.Lead_Singer_from_Band_with_Other_Vocalists">
                             Lead Singer from Band with Other Vocalists</md-checkbox>
                             <md-checkbox class="block-input" name="other">
                                 <md-input-container class="full-width">
                                 <input md-input mdInput type="text"
                                 id="resourceTopic" 
                                 class="form-control" 
-                                [(ngModel)]="submission.data.categories.Other"
+                                [(ngModel)]="submission.data.ensembles.Other"
                                 name="resourceTopicOther"
                                 placeholder="Other Ensemble"/>
                                 </md-input-container>
