--- a/src/app/entry/entryOrgs/entryOrgs.html
+++ b/src/app/entry/entryOrgs/entryOrgs.html
@@ -194,7 +194,7 @@
                     
                     <div class="form-group">
                         <label for="orgResource">Are any of your resources free?</label>
-                            <md-radio-group [(ngModel)]="submission.data.resource_free" name="orgResource" required>
+                            <md-radio-group [(ngModel)]="submission.data.is_org_free" name="orgResource" required>
                                 <md-radio-button class="block-input" name="resource" value="Yes" required>Yes</md-radio-button>
                                 <md-radio-button class="block-input" name="resource" value="No">No</md-radio-button>
                                 <md-radio-button class="block-input" name="resource" value="We don't offer resources">We don't offer resources</md-radio-button>
@@ -203,7 +203,7 @@
 
                     <div class="form-group">
                         <label for="orgConference">Are any of your events/conferences free?</label>
-                            <md-radio-group [(ngModel)]="submission.data.event_free" name="orgConference" required>
+                            <md-radio-group [(ngModel)]="submission.data.events_free" name="orgConference" required>
                                 <md-radio-button class="block-input" name="conference" value="Yes" required>Yes</md-radio-button>
                                 <md-radio-button class="block-input" name="conference" value="No">No</md-radio-button>
                                 <md-radio-button class="block-input" name="conference" value="We don't offer events/conferences">We don't offer events/conferences</md-radio-button>
@@ -247,7 +247,7 @@
                             placeholder="How does your organization encourage, promote, or enliven congregational song?"
                             id="orgMethod" 
                             class="form-control" 
-                            [(ngModel)]="submission.data.method"
+                            [(ngModel)]="submission.data.process"
                             name="orgMethod"
                             #orgMethod="ngModel"
                             required/>
