--- a/src/app/entry/entryOrgs/entryOrgs.html
+++ b/src/app/entry/entryOrgs/entryOrgs.html
@@ -261,6 +261,18 @@
                         </div>
                     </div>  
 
+                    <div class="form-group">
+                        <label for="orgPractSchol">Is this resource practical or scholarly or both??</label>
+                        <md-radio-group [(ngModel)]="submission.data.pract_schol" name="orgPractSchol" required>
+                            <md-radio-button class="block-input" value="Practical" required> 
+                                Practical</md-radio-button>
+                            <md-radio-button class="block-input" value="Scholarly"> 
+                                Scholarly</md-radio-button>
+                            <md-radio-button class="block-input" value="Both"> 
+                                Both</md-radio-button>
+                        </md-radio-group>
+                    </div> 
+
                     <md-card-actions>
                         <button md-raised-button color="primary" type="submit" 
                         [disabled]="orgsForm.invalid">
