added new queSTION

--- a/src/app/entry/entryResources/entryResources.html
+++ b/src/app/entry/entryResources/entryResources.html
@@ -47,6 +47,7 @@
                     <md-radio-button class="block-input" name="type" value="Forum"> Forum</md-radio-button>
                     <md-radio-button class="block-input" name="type" value="Audio Track(s)"> Audio Track(s)</md-radio-button>
                     <md-radio-button class="block-input" name="type" value="Video/Visual(s)"> Video/Visual(s)</md-radio-button>
+                     <md-radio-button class="block-input" name="type" value="Hymnal/Songbook"> Hymnal/Songbook</md-radio-button>
                     <md-radio-button class="block-input" name="type" value="other">                                         
                         <md-input-container class="full-width">
                         <input md-input mdInput type="text"
