--- a/src/app/entry/entryPerson/entryPerson.html
+++ b/src/app/entry/entryPerson/entryPerson.html
@@ -258,68 +258,68 @@
                             </md-checkbox>
                     </div>
 
-                    <div class="form-group">
-                        <label for="personEthnicity">Which ethnicities do you work with in at least 10% of your events??</label>
-                            <md-checkbox class="block-input"
-                                ng-true-value="true" 
-                                ng-false-value="false"
-                                name="personEthnicityOne"
-                                [(ngModel)]="submission.data.ethnicities.White"> 
-                            White
-                            </md-checkbox>
-                            <md-checkbox class="block-input"
-                                ng-true-value="true" 
-                                ng-false-value="false"
-                                name="personEthnicityTwo"
-                                [(ngModel)]="submission.data.ethnicities.Black"> 
-                            Black
-                            </md-checkbox>
-                            <md-checkbox class="block-input"
-                                ng-true-value="true" 
-                                ng-false-value="false"
-                                name="personEthnicityThree"
-                                [(ngModel)]="submission.data.ethnicities.Hispanic_Latin_American_Caribbean"> 
-                            Hispanic/Latin-American/Caribbean
-                            </md-checkbox>
-                            <md-checkbox class="block-input"
-                                ng-true-value="true" 
-                                ng-false-value="false"
-                                name="personEthnicityFour"
-                                [(ngModel)]="submission.data.ethnicities.Native_American_Indigenous_Peoples"> 
-                            Native American/Indigenous Peoples
-                            </md-checkbox>
-                            <md-checkbox class="block-input"
-                                ng-true-value="true" 
-                                ng-false-value="false"
-                                name="personEthnicityFive"
-                                [(ngModel)]="submission.data.ethnicities.Asian"> 
-                            Asian
-                            </md-checkbox>
-                            <md-checkbox class="block-input"
-                                ng-true-value="true" 
-                                ng-false-value="false"
-                                name="personEthnicitySix"
-                                [(ngModel)]="submission.data.ethnicities.African"> 
-                            African
-                            </md-checkbox>
-                            <md-checkbox class="block-input"
-                                ng-true-value="true" 
-                                ng-false-value="false"
-                                name="personEthnicitySeven"
-                                [(ngModel)]="submission.data.ethnicities.Middle_Eastern"> 
-                            Middle-Eastern
-                            </md-checkbox>
-                            <md-checkbox class="block-input" name="other">
-                                <md-input-container class="full-width">
-                                    <input md-input mdInput type="text"
-                                    id="resourceTopic" 
-                                    class="form-control" 
-                                    [(ngModel)]="submission.data.ethnicities.Other"
-                                    name="resourceEthnicityOther"
-                                    placeholder="Other Ethnicities"/>
-                                </md-input-container>
-                        </md-checkbox>
-                    </div>
+            <div class="form-group">
+                <label for="personEthnicity">Which ethnicities do you work with in at least 10% of your events?</label>
+                    <md-checkbox class="block-input"
+                        ng-true-value="true"
+                        ng-false-value="false"
+                        name="personEthnicitySix"
+                        [(ngModel)]="submission.data.ethnicities.African">
+                        African
+                    </md-checkbox>
+                    <md-checkbox class="block-input"
+                        ng-true-value="true"
+                        ng-false-value="false"
+                        name="personEthnicityFive"
+                        [(ngModel)]="submission.data.ethnicities.Asian">
+                        Asian
+                    </md-checkbox>
+                    <md-checkbox class="block-input"
+                        ng-true-value="true"
+                        ng-false-value="false"
+                        name="personEthnicityTwo"
+                        [(ngModel)]="submission.data.ethnicities.Black">
+                        Black
+                    </md-checkbox>
+                    <md-checkbox class="block-input"
+                        ng-true-value="true"
+                        ng-false-value="false"
+                        name="personEthnicityThree"
+                        [(ngModel)]="submission.data.ethnicities.Hispanic_Latinx_Caribbean">
+                        Hispanic/Latinx/Caribbean
+                    </md-checkbox>
+                    <md-checkbox class="block-input"
+                        ng-true-value="true"
+                        ng-false-value="false"
+                        name="personEthnicitySeven"
+                        [(ngModel)]="submission.data.ethnicities.Middle_Eastern">
+                        Middle Eastern
+                    </md-checkbox>
+                    <md-checkbox class="block-input"
+                        ng-true-value="true"
+                        ng-false-value="false"
+                        name="personEthnicityFour"
+                        [(ngModel)]="submission.data.ethnicities.Native_American_Indigenous_Peoples">
+                        Native American/Indigenous Peoples
+                    </md-checkbox>
+                    <md-checkbox class="block-input"
+                        ng-true-value="true"
+                        ng-false-value="false"
+                        name="personEthnicityOne"
+                        [(ngModel)]="submission.data.ethnicities.White">
+                        White
+                    </md-checkbox>
+                    <md-checkbox class="block-input">
+                        <md-input-container class="full-width">
+                        <input md-input mdInput type="text"
+                        id="personEnsemble" 
+                        class="form-control" 
+                        name="personEthnicityEight"
+                        [(ngModel)]="submission.data.ethnicities.Other"
+                        placeholder="Other Ethnicity"/>
+                        </md-input-container>
+                    </md-checkbox>
+            </div>
 
                     <div class="form-group">
                         <label for="personEnsemble">What types of ensembles are you comfortable working with?</label>
@@ -360,10 +360,10 @@
                             <md-checkbox class="block-input" name="other">
                                 <md-input-container class="full-width">
                                 <input md-input mdInput type="text"
-                                id="resourceTopic" 
+                                id="personTopic" 
                                 class="form-control" 
                                 [(ngModel)]="submission.data.ensembles.Other"
-                                name="resourceTopicOther"
+                                name="personTopicOther"
                                 placeholder="Other Ensemble"/>
                                 </md-input-container>
                             </md-checkbox>
