--- a/src/app/entry/entryResources/entryResources.html
+++ b/src/app/entry/entryResources/entryResources.html
@@ -474,7 +474,7 @@
             </div>
 
                     <div class="form-group">
-                        <label for="resourcePractSchol">Is this resource practical or scholarly or both??</label>
+                        <label for="resourcePractSchol">Is this resource practical or scholarly or both?</label>
                         <md-radio-group [(ngModel)]="submission.data.pract_schol" name="resourcePractSchol" required>
                             <md-radio-button class="block-input" value="Practical" required> 
                                 Practical</md-radio-button>
