modified some small changes

--- a/src/app/entry/entryResources/entryResources.html
+++ b/src/app/entry/entryResources/entryResources.html
@@ -226,6 +226,13 @@
                         [(ngModel)]="submission.data.topics.Social_Justice">
                         Social Justice
                     </md-checkbox>
+                    <md-checkbox class="block-input"
+                        ng-true-value = "true"
+                        ng-false-value = "false"
+                        name="resourceTopicFour"
+                        [(ngModel)]="submission.data.topics.Worship">
+                        Worship
+                    </md-checkbox>
                     <md-checkbox class="block-input">                    
                         <md-input-container class="full-width">
                         <input md-input mdInput type="text"
